--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/products/product-services.yml
@@ -4,8 +4,8 @@ info:
   title: Product Services
   version: 1.27.6-SNAPSHOT
   description: |
-    This component represents the OpenAPI interface of the accounting service.
-    
+    This component represents the OpenAPI interface of the accounting service.<br>
+    <br>
     Dear Developers, please be aware that multi line comments can also be used.
   termsOfService: https://www.anaptecs.de/jeaf/TermsOfUse
   contact:
@@ -23,8 +23,8 @@ servers:
   - url: https://test-jeaf.anaptecs.de
   - url: https://jeaf.anaptecs.de
     description: |
-      This is our lovely production environment
-      
+      This is our lovely production environment<br>
+      <br>
       It can stand any load, until it crashes ;-)
 
 tags:
