--- a/jeaf-generator-test-error-handling/pom.xml
+++ b/jeaf-generator-test-error-handling/pom.xml
@@ -71,6 +71,8 @@
 					<generateNotNullAnnotationForSingleValuedProperties>true</generateNotNullAnnotationForSingleValuedProperties>
 					<generateNotEmptyAnnotationForMultiValuedProperties>true</generateNotEmptyAnnotationForMultiValuedProperties>
 					
+					<enforceExplicitDefaultValueForOptionalPrimitives>true</enforceExplicitDefaultValueForOptionalPrimitives>
+					
 					<!-- For test purposes the build does not break if we face problems here as this is the intention of this Maven project -->
 					<breakBuildOnGeneratorError>false</breakBuildOnGeneratorError>
 
