--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -1236,6 +1236,7 @@ paths:
           schema:
             type: integer
             format: int32
+            default: 4711
       responses:
         '201':
           description: >-
