--- a/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/products/product-services.yml
@@ -1206,6 +1206,7 @@ paths:
           schema:
             type: integer
             format: int32
+            default: 4711
       responses:
         '200':
           description: |
