--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/products/product-services.yml
@@ -2129,6 +2129,7 @@ paths:
           schema:
             type: integer
             format: int32
+            default: 4711
       responses:
         '200':
           description: |
