Implemented and tested #320

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -665,6 +665,7 @@ paths:
                   examples:
                    - 'CHF'
                 minItems: 1
+                uniqueItems: true
                 nullable: false
                 examples:
                  - '["CHF", "EUR", "USD"]'
@@ -685,6 +686,7 @@ paths:
                   examples:
                    - 'CHF'
                 minItems: 1
+                uniqueItems: true
                 nullable: false
           headers:
             X-Global-Response-Header:
@@ -979,6 +981,7 @@ paths:
                   maxLength: 3
                   examples:
                    - 'CHF'
+                uniqueItems: true
                 nullable: true
           headers:
             X-Global-Response-Header:
@@ -1022,6 +1025,7 @@ paths:
                   maxLength: 3
                   examples:
                    - 'CHF'
+                uniqueItems: true
                 nullable: true
           headers:
             X-Global-Response-Header:
@@ -1417,6 +1421,7 @@ paths:
             items:
               type: integer
               format: int32
+            uniqueItems: true
       responses:
         '201':
           description: >-
@@ -1448,6 +1453,7 @@ paths:
             items:
               type: number
               format: double
+            uniqueItems: true
             nullable: true
       responses:
         '201':
@@ -1480,6 +1486,7 @@ paths:
             items:
               type: number
               format: double
+            uniqueItems: true
             nullable: true
         - name: pEnums
           in: query
@@ -1521,6 +1528,7 @@ paths:
               type: string
               minLength: 32
               maxLength: 128
+            uniqueItems: true
             nullable: true
         - name: longCodeQueryParam
           in: query
@@ -1531,6 +1539,7 @@ paths:
             items:
               type: integer
               format: int64
+            uniqueItems: true
             nullable: true
         - name: literals
           in: query
@@ -1600,6 +1609,7 @@ paths:
               type: string
               minLength: 32
               maxLength: 128
+            uniqueItems: true
             nullable: true
         - name: longCodeQueryParam
           in: query
@@ -1610,6 +1620,7 @@ paths:
             items:
               type: integer
               format: int64
+            uniqueItems: true
             nullable: true
         - name: literals
           in: query
@@ -1746,6 +1757,7 @@ paths:
               type: integer
               format: int32
               maximum: 4711
+            uniqueItems: true
             nullable: true
         - name: byte-code
           in: query
@@ -2073,6 +2085,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Offer'
+          uniqueItems: true
     # com.anaptecs.jeaf.junit.rest.generics.PagedBusinessObjects
     PagedBusinessObjects:
       type: object
