--- a/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
@@ -646,6 +646,7 @@ paths:
                   maxLength: 3
                   example: CHF
                 minItems: 1
+                uniqueItems: true
                 nullable: false
                 example: ["CHF", "EUR", "USD"]
       responses:
@@ -664,6 +665,7 @@ paths:
                   maxLength: 3
                   example: CHF
                 minItems: 1
+                uniqueItems: true
                 nullable: false
           headers:
             X-Global-Response-Header:
@@ -952,6 +954,7 @@ paths:
                   minLength: 3
                   maxLength: 3
                   example: CHF
+                uniqueItems: true
                 nullable: true
           headers:
             X-Global-Response-Header:
@@ -992,6 +995,7 @@ paths:
                   minLength: 3
                   maxLength: 3
                   example: CHF
+                uniqueItems: true
                 nullable: true
           headers:
             X-Global-Response-Header:
@@ -1368,6 +1372,7 @@ paths:
             items:
               type: integer
               format: int32
+            uniqueItems: true
       responses:
         '200':
           description: |
@@ -1399,6 +1404,7 @@ paths:
             items:
               type: number
               format: double
+            uniqueItems: true
             nullable: true
       responses:
         '200':
@@ -1431,6 +1437,7 @@ paths:
             items:
               type: number
               format: double
+            uniqueItems: true
             nullable: true
         - name: pEnums
           in: query
@@ -1472,6 +1479,7 @@ paths:
               type: string
               minLength: 32
               maxLength: 128
+            uniqueItems: true
             nullable: true
         - name: longCodeQueryParam
           in: query
@@ -1482,6 +1490,7 @@ paths:
             items:
               type: integer
               format: int64
+            uniqueItems: true
             nullable: true
         - name: literals
           in: query
@@ -1551,6 +1560,7 @@ paths:
               type: string
               minLength: 32
               maxLength: 128
+            uniqueItems: true
             nullable: true
         - name: longCodeQueryParam
           in: query
@@ -1561,6 +1571,7 @@ paths:
             items:
               type: integer
               format: int64
+            uniqueItems: true
             nullable: true
         - name: literals
           in: query
@@ -1697,6 +1708,7 @@ paths:
               type: integer
               format: int32
               maximum: 4711
+            uniqueItems: true
             nullable: true
         - name: byte-code
           in: query
@@ -2014,6 +2026,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Offer'
+          uniqueItems: true
     # com.anaptecs.jeaf.junit.rest.generics.PagedBusinessObjects
     PagedBusinessObjects:
       type: object
