--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/products/product-services.yml
@@ -599,6 +599,7 @@ paths:
                   examples:
                    - CHF
                 minItems: 1
+                uniqueItems: true
                 nullable: false
                 examples:
                  - ["CHF", "EUR", "USD"]
@@ -620,6 +621,7 @@ paths:
                    - CHF
                 minItems: 1
                 maxItems: 20
+                uniqueItems: true
                 nullable: false
           headers:
             X-Global-Response-Header:
@@ -1214,6 +1216,7 @@ paths:
             type: array
             items:
               type: string
+            uniqueItems: true
             nullable: true
       responses:
         '200':
@@ -1500,6 +1503,7 @@ paths:
                   maxLength: 3
                   examples:
                    - CHF
+                uniqueItems: true
                 nullable: true
     
         '400':
@@ -1541,6 +1545,7 @@ paths:
                   maxLength: 3
                   examples:
                    - CHF
+                uniqueItems: true
                 nullable: true
     
         '400':
@@ -1743,6 +1748,7 @@ paths:
             items:
               type: string
               format: date-time
+            uniqueItems: true
       responses:
         '204':
           description: |
@@ -1936,6 +1942,7 @@ paths:
             items:
               type: string
               format: date-time
+            uniqueItems: true
       responses:
         '204':
           description: |
@@ -2267,6 +2274,7 @@ paths:
               items:
                 type: integer
                 format: int32
+              uniqueItems: true
       responses:
         '200':
           description: |
@@ -2335,6 +2343,7 @@ paths:
             type: array
             items:
               type: string
+            uniqueItems: true
       responses:
         '200':
           description: |
@@ -2363,6 +2372,7 @@ paths:
             items:
               type: integer
               format: int32
+            uniqueItems: true
       responses:
         '200':
           description: |
@@ -2421,6 +2431,7 @@ paths:
               type: integer
               format: int32
               minItems: 1
+            uniqueItems: true
       responses:
         '200':
           description: |
@@ -2449,12 +2460,14 @@ paths:
             items:
               type: integer
               format: int32
+            uniqueItems: true
         - name: strings
           in: query
           schema:
             type: array
             items:
               type: string
+            uniqueItems: true
         - name: integers
           in: query
           schema:
@@ -2462,18 +2475,21 @@ paths:
             items:
               type: integer
               format: int32
+            uniqueItems: true
         - name: timeUnits
           in: query
           schema:
             type: array
             items:
               $ref: '../base/product-base.yml#/components/schemas/TimeUnit'
+            uniqueItems: true
         - name: timeUnitArray
           in: query
           schema:
             type: array
             items:
               $ref: '../base/product-base.yml#/components/schemas/TimeUnit'
+            uniqueItems: true
       responses:
         '200':
           description: |
@@ -2510,6 +2526,7 @@ paths:
               type: integer
               format: int64
             minItems: 1
+            uniqueItems: true
             nullable: false
         - name: bookingIDs
           in: query
@@ -2532,6 +2549,7 @@ paths:
             items:
               type: string
               format: date
+            uniqueItems: true
       responses:
         '200':
           description: |
@@ -2560,12 +2578,14 @@ paths:
             items:
               type: integer
               format: int64
+            uniqueItems: true
         - name: codes
           in: query
           schema:
             type: array
             items:
               $ref: '../base/product-base.yml#/components/schemas/IntegerCodeType'
+            uniqueItems: true
         - name: doubleCodes
           in: query
           schema:
@@ -2573,18 +2593,21 @@ paths:
             items:
               type: number
               format: double
+            uniqueItems: true
         - name: bookingIDs
           in: query
           schema:
             type: array
             items:
               type: string
+            uniqueItems: true
         - name: bookingIDsArray
           in: query
           schema:
             type: array
             items:
               type: string
+            uniqueItems: true
         - name: offsetDateTime
           in: query
           required: true
@@ -2627,6 +2650,7 @@ paths:
             items:
               type: string
               format: time
+            uniqueItems: true
         - name: startTimestamps
           in: query
           schema:
@@ -2634,6 +2658,7 @@ paths:
             items:
               type: string
               format: date-time
+            uniqueItems: true
       responses:
         '200':
           description: |
@@ -2661,6 +2686,7 @@ paths:
             type: array
             items:
               type: string
+            uniqueItems: true
         - name: ints
           in: header
           required: true
@@ -2671,6 +2697,7 @@ paths:
               type: integer
               format: int32
               nullable: false
+            uniqueItems: true
         - name: doubles
           in: header
           schema:
@@ -2678,18 +2705,21 @@ paths:
             items:
               type: number
               format: double
+            uniqueItems: true
         - name: codes
           in: header
           schema:
             type: array
             items:
               type: string
+            uniqueItems: true
         - name: stringCodeList
           in: header
           schema:
             type: array
             items:
               type: string
+            uniqueItems: true
         - name: startDate
           in: header
           schema:
@@ -2702,6 +2732,7 @@ paths:
             items:
               type: string
               format: date
+            uniqueItems: true
         - name: timestamps
           in: header
           schema:
@@ -2709,6 +2740,7 @@ paths:
             items:
               type: string
               format: date-time
+            uniqueItems: true
         - name: calendars
           in: header
           schema:
@@ -2716,6 +2748,7 @@ paths:
             items:
               type: string
               format: date-time
+            uniqueItems: true
         - name: utilDates
           in: header
           schema:
@@ -2723,6 +2756,7 @@ paths:
             items:
               type: string
               format: date-time
+            uniqueItems: true
         - name: sqlTimestamps
           in: header
           schema:
@@ -2730,18 +2764,21 @@ paths:
             items:
               type: string
               format: date-time
+            uniqueItems: true
         - name: timeUnits
           in: header
           schema:
             type: array
             items:
               $ref: '../base/product-base.yml#/components/schemas/TimeUnit'
+            uniqueItems: true
         - name: timeUnitArray
           in: header
           schema:
             type: array
             items:
               $ref: '../base/product-base.yml#/components/schemas/TimeUnit'
+            uniqueItems: true
         - name: base64
           in: header
           schema:
@@ -2774,6 +2811,7 @@ paths:
             type: array
             items:
               type: string
+            uniqueItems: true
         - name: ints
           in: header
           required: true
@@ -2784,6 +2822,7 @@ paths:
               type: integer
               format: int32
               minItems: 1
+            uniqueItems: true
         - name: doubles
           in: header
           schema:
@@ -2791,12 +2830,14 @@ paths:
             items:
               type: number
               format: double
+            uniqueItems: true
         - name: codes
           in: header
           schema:
             type: array
             items:
               type: string
+            uniqueItems: true
             nullable: true
         - name: startDate
           in: header
@@ -2810,6 +2851,7 @@ paths:
             items:
               type: string
               format: date-time
+            uniqueItems: true
         - name: times
           in: header
           schema:
@@ -2817,6 +2859,7 @@ paths:
             items:
               type: string
               format: time
+            uniqueItems: true
         - name: BASE_64
           in: header
           schema:
